--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Welcome to YMTZIONI</title>
+</head>
+<body style="text-align:center; font-family:sans-serif;">
+  <h1>Welcome to My Jellyfin Server</h1>
+  <p>Click below to access my media library</p>
+  <a href="http://your-duckdns-address:8096" target="_blank"
+     style="background:#007bff;color:white;padding:10px 20px;
+            border-radius:6px;text-decoration:none;">
+     Open Jellyfin
+  </a>
+</body>
+</html>
